--- a/Statuts.tex
+++ b/Statuts.tex
@@ -1,14 +1,141 @@
-\documentclass{article}
-
-\usepackage[french]{babel}
-\usepackage[utf8]{inputenc}
+\documentclass[12pt]{constitution}
+\usepackage{mathpazo}
+\usepackage[francais]{babel}
 \usepackage[T1]{fontenc}
-\usepackage[squaren,cdot]{SIunits}
+\usepackage[utf8]{inputenc}
+\usepackage{array, multirow, tabularx}
 \usepackage{graphicx}
-\usepackage{listings}
-
-\graphicspath{}
 
 \begin{document}
+	\title{Rézoléo - Statuts}
+	\author{Association déclarée par application de la loi du 1er juillet 1901 et du décret du 16 août 1901}
+	\date{05/05/2017}
+	\maketitle
+	\newpage
 	
+	\article{Présentation de l'association}
+	\section{Nom}
+Il est fondé entre les adhérents aux présents statuts une association régie par la loi du 1er juillet 1901 et le décret du 16 août 1901, ayant pour titre : Rézoléo
+	
+	\section{Objet et moyens d'action}
+	L’association a pour mission :
+	\begin{itemize}
+		\item[\textbullet] La gestion, l'adaptation des réseaux de la résidence Léonard de Vinci située à Villeneuve d'Ascq,
+		\item[\textbullet]La promotion des projets et activités informatiques réalisés par ses membres auprès de l’École Centrale de Lille et du grand public.
+		\item[\textbullet] La fourniture d'un accès à internet dans le cadre réglementaire des articles L32 et suivants du Code des postes et communications électroniques.
+		\item[\textbullet] La mise en place et le maintien de services et d'outils animant la vie associative de l'ecole centrale de Lille.
+	\end{itemize}
+	
+	\section{Siège social}
+	Le siège social de l'association est situé :
+	
+	ÉCOLE CENTRALE DE LILLE \\
+	Avenue Paul Langevin \\
+	Cité Scientifique \\
+	59651 VILLENEUVE D’ASCQ. \\
+	Il pourra être transféré par simple décision du bureau.
+	
+	\section{Durée}
+	La durée de l’association est illimitée.
+	
+	\article{Composition de l'association}
+	
+	\section{Membres}
+	L'association se compose de :
+	\begin{enumerate}
+		\item Membres actifs;
+		\item Membres d'honneur;
+		\item Membres bienfaiteurs.
+	\end{enumerate}
+	
+	\medskip
+	Les membres actifs, personnes physiques ou morales, acquittent une cotisation fixée annuellement par l'Assemblée Générale. Ils sont membres de l'Assemblée Générale avec voix délibérative.
+	
+	\medskip
+	Les membres d'honneur sont désignés par l'Assemblée Générale pour les services qu'ils ont rendus ou rendent à l'association. Ils sont dispensés du paiement de la cotisation annuelle et ont le droit de participer à l'Assemblée Générale sans voix délibérative.
+	
+	\medskip
+	Les membres bienfaiteurs qui acquittent une cotisation spéciale fixée par l'Assemblée Générale ont le droit de participer à l'Assemblée Générale avec voix délibérative.
+	
+	\section{Admission}
+	Pour faire partie de l'association, il faut être agréé par le conseil d’administration, qui statue, lors de chacune de ses réunions, sur les demandes d'admission présentées.
+	
+	\section{Radiation}
+	La qualité de membre se perd par :
+	\begin{enumerate}
+		\item La démission;
+		\item Le décès;
+		\item La radiation prononcée par le conseil d'administration pour non-paiement de la cotisation ou pour motif grave, l'intéressé ayant été invité par lettre recommandée à fournir des explications devant le conseil d'administration et/ou par écrit. 
+	\end{enumerate}
+	
+	\article{Fonctionnement de l'association}
+	
+	\section{Assemblée Générale Ordinaire}
+	\label{AGO}
+	L'assemblée générale ordinaire comprend tous les membres de l'association à quelque titre qu'ils soient.
+	
+	\medskip
+	L’assemblée générale ordinaire se réunit chaque année au moins une fois par an. Quinze jours au moins avant la date fixée, les membres de l’association sont convoqués par les soins du secrétaire. L’ordre du jour est indiqué sur les convocations.
+	
+	\medskip
+	Le président, assisté des membres du bureau, préside l'assemblée et expose la situation morale de l’association.
+	
+	Le trésorier rend compte de sa gestion et soumet le bilan à l’approbation de l’assemblée.
+	
+	Il est procédé, après épuisement de l’ordre du jour, au remplacement, au scrutin secret, des membres du conseil sortants.
+	
+	\medskip
+	Ne devront être traitées, lors de l’assemblée générale, que les questions soumises à l’ordre du jour.
+	
+	\section{Assemblée Générale Extraordinaire}
+	Si besoin est, ou sur la demande de la moitié plus un des membres inscrits, le président peut convoquer une assemblée générale extraordinaire, suivant les formalités prévues par l’article \ref{AGO}.
+	
+	\section{Conseil d'Administration}
+	L'association est dirigée par un conseil de \tailleCA membres, 
+	élus
+	 pour \dureeMandatCA années par l'assemblée générale. Les membres sont rééligibles.
+	
+	En cas de vacances, le conseil pourvoit provisoirement au remplacement de ses membres. Il est procédé à leur remplacement définitif par la plus prochaine assemblée générale. Les pouvoirs des membres ainsi élus prennent fin à l'expiration le mandat des membres remplacés.
+	
+	\medskip
+	Le conseil d'administration se réunit au moins une fois tous les six mois, sur convocation du président, ou à la demande du quart de ses membres.
+	
+	Les décisions sont prises à la majorité des voix; en cas de partage, la voix du président est prépondérante. 
+	
+	\medskip
+	Tout membre du conseil qui, sans excuse, n'aura pas assisté à trois réunions consécutives sera considéré comme démissionnaire. 
+	
+	\section{Bureau}
+	Le conseil d'administration élit parmi ses membres, au scrutin secret, un bureau composé de :
+	\begin{enumerate}
+		\item Un-e président-e-;
+		\item Un-e ou plusieurs vice-président-e-s;
+		\item Un-e secrétaire et, s'il y a lieu, un-e secrétaire adjoint-e;
+		\item Un-e trésorier-e, et, si besoin est, un-e trésorier-e adjoint-e. 
+	\end{enumerate}
+	
+	\section{Règlement intérieur}
+	Un règlement intérieur peut être établi par le conseil d’administration, qui le fait alors approuver par l’assemblée générale.
+	
+	Ce règlement éventuel précise certains points des statuts, notamment ceux qui ont trait à l’administration interne de l’association.
+	
+	\article{Ressources de l'association}
+	
+	\section{Ressources}
+	Les ressources de l’association se composent :
+	\begin{enumerate}
+		\item Des cotisations;
+		\item Des subventions de l’État, des collectivités territoriales et des établissements publics;
+		\item Du produit des manifestations qu’elle organise;
+		\item Des intérêts et redevances des biens et valeurs qu’elle peut posséder;
+		\item Des rétributions des services rendus ou des prestations fournies par l'association;
+		\item De dons manuels;
+		\item De toutes autres ressources autorisées par la loi, notamment, le recours en cas de
+		nécessité, à un ou plusieurs emprunts bancaires ou privés.
+	\end{enumerate}
+	
+	\article{Dissolution de l'association}
+	
+	\section{Dissolution}
+	En cas de dissolution prononcée par les deux tiers au moins des membres présents à l’assemblée générale, un ou plusieurs liquidateurs sont nommés par celle-ci et l’actif, s’il y a lieu, est dévolu conformément à l’article 9 de la loi du 1er juillet 1901 et au décret du 16 août 1901.
 \end{document}
