Finish porting statuts from etherpad to TeX
waiting for proofread

--- a/Statuts.tex
+++ b/Statuts.tex
@@ -9,7 +9,7 @@
 \begin{document}
 	\title{Rézoléo - Statuts}
 	\author{Association déclarée par application de la loi du 1er juillet 1901 et du décret du 16 août 1901}
-	\date{05/05/2017}
+	\date{27/04/2017}
 	\maketitle
 	\newpage
 	
@@ -27,9 +27,9 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 	\end{itemize}
 	
 	\section{Siège social}
-	Le siège social de l'association est situé :
-	
-	ÉCOLE CENTRALE DE LILLE \\
+	Le siège social de l'association est situé :\\
+	\\
+	\noindent ÉCOLE CENTRALE DE LILLE \\
 	Avenue Paul Langevin \\
 	Cité Scientifique \\
 	59651 VILLENEUVE D’ASCQ. \\
@@ -40,102 +40,70 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 	
 	\article{Composition de l'association}
 	
-	\section{Membres}
-	L'association se compose de :
-	\begin{enumerate}
-		\item Membres actifs;
-		\item Membres d'honneur;
-		\item Membres bienfaiteurs.
-	\end{enumerate}
+	\section{Adhérents connectés}
+		
+	Tout résident de la Résidence Léonard De Vinci peut devenir membre connecté, il peut donc bénéficier de l’ensemble des services de l’association. Il doit pour cela s’acquitter d’une cotisation et signer un contrat dont le montant est défini dans le règlement intérieur. La qualité d’adhérent connecté se perd suite à un défaut de paiement ou par infraction au règlement interieur. La durée d’adhésion est choisie par l’adhérent selon les offres proposées par l’association et peut être reconduite.
 	
-	\medskip
-	Les membres actifs, personnes physiques ou morales, acquittent une cotisation fixée annuellement par l'Assemblée Générale. Ils sont membres de l'Assemblée Générale avec voix délibérative.
+	\section{Adhérents non connectés}
 	
-	\medskip
-	Les membres d'honneur sont désignés par l'Assemblée Générale pour les services qu'ils ont rendus ou rendent à l'association. Ils sont dispensés du paiement de la cotisation annuelle et ont le droit de participer à l'Assemblée Générale sans voix délibérative.
+	Tout élève de l’Ecole centrale de Lille et de L’Institut Technologique Européen d'Entrepreneuriat et de Management peut devenir membre non connecté de l’association. Il peut bénéficier de l’ensemble des services de l’association à l’exception du droit d’accès à Internet. La qualité d’adhérent non connecté se perd par décision du bureau. La durée d’adhésion est de 1 an et 1 jour à compter de la date à laquelle elle est validée.
 	
-	\medskip
-	Les membres bienfaiteurs qui acquittent une cotisation spéciale fixée par l'Assemblée Générale ont le droit de participer à l'Assemblée Générale avec voix délibérative.
+	\section{Adhérents d'honneur}
 	
-	\section{Admission}
-	Pour faire partie de l'association, il faut être agréé par le conseil d’administration, qui statue, lors de chacune de ses réunions, sur les demandes d'admission présentées.
+	Tout personne qui a été adhérente et dont l’adhésion a pris fin normalement peut se voir attribuée sur décision du bureau le statut d’adhérent d’honneur. Elle peut bénéficier des services de l’association à l’exception du droit d’accès à Internet et ne dispose pas d’un droit de vote en Assemblée générale.
 	
 	\section{Radiation}
 	La qualité de membre se perd par :
 	\begin{enumerate}
-		\item La démission;
-		\item Le décès;
-		\item La radiation prononcée par le conseil d'administration pour non-paiement de la cotisation ou pour motif grave, l'intéressé ayant été invité par lettre recommandée à fournir des explications devant le conseil d'administration et/ou par écrit. 
+		\item[\textbullet] Le décès;
+		\item[\textbullet] La démission adressée lors d'une assemblée générale;
+		\item[\textbullet] L'exclusion motivée votée à la majorité lors d'une assemblé générale
+		\item[\textbullet] La perte des qualifications requises pour être adhérent
+		\item[\textbullet] Le non respect du règlement
 	\end{enumerate}
 	
-	\article{Fonctionnement de l'association}
-	
-	\section{Assemblée Générale Ordinaire}
-	\label{AGO}
-	L'assemblée générale ordinaire comprend tous les membres de l'association à quelque titre qu'ils soient.
-	
-	\medskip
-	L’assemblée générale ordinaire se réunit chaque année au moins une fois par an. Quinze jours au moins avant la date fixée, les membres de l’association sont convoqués par les soins du secrétaire. L’ordre du jour est indiqué sur les convocations.
-	
-	\medskip
-	Le président, assisté des membres du bureau, préside l'assemblée et expose la situation morale de l’association.
-	
-	Le trésorier rend compte de sa gestion et soumet le bilan à l’approbation de l’assemblée.
-	
-	Il est procédé, après épuisement de l’ordre du jour, au remplacement, au scrutin secret, des membres du conseil sortants.
-	
-	\medskip
-	Ne devront être traitées, lors de l’assemblée générale, que les questions soumises à l’ordre du jour.
-	
-	\section{Assemblée Générale Extraordinaire}
-	Si besoin est, ou sur la demande de la moitié plus un des membres inscrits, le président peut convoquer une assemblée générale extraordinaire, suivant les formalités prévues par l’article \ref{AGO}.
-	
-	\section{Conseil d'Administration}
-	L'association est dirigée par un conseil de \tailleCA membres, 
-	élus
-	 pour \dureeMandatCA années par l'assemblée générale. Les membres sont rééligibles.
-	
-	En cas de vacances, le conseil pourvoit provisoirement au remplacement de ses membres. Il est procédé à leur remplacement définitif par la plus prochaine assemblée générale. Les pouvoirs des membres ainsi élus prennent fin à l'expiration le mandat des membres remplacés.
-	
-	\medskip
-	Le conseil d'administration se réunit au moins une fois tous les six mois, sur convocation du président, ou à la demande du quart de ses membres.
-	
-	Les décisions sont prises à la majorité des voix; en cas de partage, la voix du président est prépondérante. 
-	
-	\medskip
-	Tout membre du conseil qui, sans excuse, n'aura pas assisté à trois réunions consécutives sera considéré comme démissionnaire. 
-	
-	\section{Bureau}
-	Le conseil d'administration élit parmi ses membres, au scrutin secret, un bureau composé de :
-	\begin{enumerate}
-		\item Un-e président-e-;
-		\item Un-e ou plusieurs vice-président-e-s;
-		\item Un-e secrétaire et, s'il y a lieu, un-e secrétaire adjoint-e;
-		\item Un-e trésorier-e, et, si besoin est, un-e trésorier-e adjoint-e. 
-	\end{enumerate}
+	\article{DIRECTION DE L’ASSOCIATION}
 	
 	\section{Règlement intérieur}
-	Un règlement intérieur peut être établi par le conseil d’administration, qui le fait alors approuver par l’assemblée générale.
+L'association Rézoléo se dote d’un Règlement intérieur, définissant la cotisation, les modalités d'élections au sein de l'association et décrivant les engagements des adhérents envers l’Association. Le non-respect du Règlement Intérieur pourra entraîner des sanctions allant jusqu’à l’exclusion définitive de l’association.
 	
-	Ce règlement éventuel précise certains points des statuts, notamment ceux qui ont trait à l’administration interne de l’association.
+	\section{Assemblée Générale}
 	
-	\article{Ressources de l'association}
+	L’Assemblée Générale est constituée de l’ensemble des adhérents à jour de cotisation, qui disposent chacun d’un droit de vote. L’Assemblée Générale est souveraine dans toutes ses décisions.
 	
-	\section{Ressources}
-	Les ressources de l’association se composent :
-	\begin{enumerate}
-		\item Des cotisations;
-		\item Des subventions de l’État, des collectivités territoriales et des établissements publics;
-		\item Du produit des manifestations qu’elle organise;
-		\item Des intérêts et redevances des biens et valeurs qu’elle peut posséder;
-		\item Des rétributions des services rendus ou des prestations fournies par l'association;
-		\item De dons manuels;
-		\item De toutes autres ressources autorisées par la loi, notamment, le recours en cas de
-		nécessité, à un ou plusieurs emprunts bancaires ou privés.
-	\end{enumerate}
+	\section{Assemblée Générale Ordinaire}
 	
-	\article{Dissolution de l'association}
+	L'Assemblée Générale se réunit en Assemblée Générale Ordinaire une fois par an. Les convocations et l’ordre du jour sont transmis au moins une semaine en avance à tous les membres de l’Association par le secrétaire. Tous les membres de l'Assemblée Générale disposent d’une voix. Les sujets de vote doivent explicitement être annoncés dans l’ordre du jour préparé par le président de l'association, à partir des points qui lui auront étés proposés par les membres de l'association. En cas d’égalité de voix, celle du Président est prépondérante. Il est possible de voter par procuration. Le quorum est fixé à 5\% des adhérents. 
+	
+	Lors de l'AGO, le président sortant présente un bilan moral des activités de l’association durant l’année écoulée. Le trésorier sortant présente le bilan financier et les comptes de l’association. En cas de démission ou de motif légitime, tout membre désigné en réunion peut effectuer ces bilans. Ces bilans sont soumis à l’approbation de l’assemblée.
+	
+	\section{Assemblée Générale Extraordinaire}
+	Sur décision du président ou à la suite d'une demande d'au moins 10\% des adhérents, l'Assemblée Générale est convoquée pour une Assemblée Générale Extraordinaire. L’Ordre du Jour est alors transmis au moins une semaine en avance à tous les membres de l’Association. Chaque adhérent dispose d’un vote. En cas d'égalité, la voix du président est prépondérante. Il est possible de voter par procuration (par lettre ou par mail signé selon un protocole sécurisé). Par défaut un Quorum de 5\%, pour la modification des statuts, pour la dissolution de l'association le quorum, est fixé à 15\%. Dans le cas où le quorum ne serait pas atteint, une nouvelle assemblée peut être reconvoquée dans un délai minimal de quinze jours, sans condition de quorum. 
+	
+	\section{Bureau}
+	
+	Le Bureau est élu par les membres adhérents de l'association. Les membres souhaitant se présenter aux différents postes doivent émettre leurs candidature une semaine à l'avance. Cette candidature peut être refusé par le bureau en place. Il comporte obligatoirement un président, un secrétaire et un trésorier. Si elles le jugent nécessaire, il pourra être choisi par chacune des parties prenantes du bureau un adjoint parmi les autres membres adhérents afin de les aider dans leurs prérogatives. Il est possible de voter par procuration (par lettre ou par mail signé selon un protocole sécurisé). Les membres du Bureau peuvent se voir destitués de leurs fonctions s'ils s'absentent ou se voient dans l'incapacité d'exercer leurs fonctions pour une durée supérieure à 3 mois. Dans ce cas les membres adhérents organisent une nouvelle élection pour choisir un ou des remplaçants.\\
+	
+	\begin{itemize}
+		\item[\textbullet] Président \\
+		 Le président est le responsable moral de l’Association. Il est à ce titre habilité à agir auprès des tiers au nom de l’association. Il est garant, avec le trésorier, de la santé de l’association, tant d’un point de vue pratique que financier.\\
+		Le rôle du président pourra être précisé, dans ses modalités, dans le Règlement Intérieur. \newpage
+		\item[\textbullet] Trésorier \\
+		Le trésorier est responsable de la gestion comptable et financière de l’association, notamment du fonctionnement de ses comptes bancaires ainsi que de la saisie comptable. Il assure le recouvrement des cotisations et des ressources de toute nature de l’association. Il effectue les paiements et perçoit les recettes avec l’accord du président.\\
+		
+		\item[\textbullet] Secrétaire\\
+		Le secrétaire est responsable de la bonne tenue des réunions, ainsi que de leur compte-rendu. Il est responsable et de la gestion administrative de l’association, notamment de l’acheminement du courrier (superflu et trop précis). Il est également habilité sous réserve du droit des tiers à délivrer tout les documents officiels du Rézoléo.  Le rôle du secrétaire pourra être précisé dans le Règlement Intérieur. \\
+		
+		Tout membre du bureau ne peut être nommé à plus d'un poste à la fois. Le Bureau est renouvelé tous les ans selon les modalités de renouvellement précisées dans le règlement intérieur.\\
+	\end{itemize}
+	
+	\article{SITUATIONS EXCEPTIONNELLES}
+	
+	\section{Modification des statuts}
+	Les présents statuts peuvent être modifiés sur proposition du Bureau et vote lors d'une Assemblée Générale Ordinaire dont le quorum est fixée à 5\%. (déjà mentionné précédemment, nettoyez un article)
+	Les procédures sont alors entreprises par le Secrétaire ou tout autre personne nommé en assemblé générale dans un délai d’un mois après la parution du Compte Rendu. (Superflu dans les statuts)
 	
 	\section{Dissolution}
-	En cas de dissolution prononcée par les deux tiers au moins des membres présents à l’assemblée générale, un ou plusieurs liquidateurs sont nommés par celle-ci et l’actif, s’il y a lieu, est dévolu conformément à l’article 9 de la loi du 1er juillet 1901 et au décret du 16 août 1901.
+	L’Association peut être dissoute sur proposition du Bureau et vote lors d'une Assemblée Générale Extraordinaire dont le quorum est fixé à 15\%.
+	Le Président ou tout autre personne nommée en Assemblé générale est alors responsable du processus de dissolution tel que décrit par le cadre légal jusqu’à son aboutissement.
 \end{document}
