--- a/Statuts.tex
+++ b/Statuts.tex
@@ -12,98 +12,96 @@
 	\date{27/04/2017}
 	\maketitle
 	\newpage
-	
+
 	\article{Présentation de l'association}
+
 	\section{Nom}
 Il est fondé entre les adhérents aux présents statuts une association régie par la loi du 1er juillet 1901 et le décret du 16 août 1901, ayant pour titre : Rézoléo
-	
+
 	\section{Objet et moyens d'action}
-	L’association a pour mission :
+	L’association a pour missions :
 	\begin{itemize}
-		\item[\textbullet] La gestion, l'adaptation des réseaux de la résidence Léonard de Vinci située à Villeneuve d'Ascq,
-		\item[\textbullet]La promotion des projets et activités informatiques réalisés par ses membres auprès de l’École Centrale de Lille et du grand public.
-		\item[\textbullet] La fourniture d'un accès à internet dans le cadre réglementaire des articles L32 et suivants du Code des postes et communications électroniques.
-		\item[\textbullet] La mise en place et le maintien de services et d'outils animant la vie associative de l'ecole centrale de Lille.
+		\item[\textbullet] la gestion, l'adaptation des réseaux de la résidence Léonard de Vinci située à Villeneuve d'Ascq ;
+		\item[\textbullet]la promotion des projets et activités informatiques réalisés par ses membres auprès de l’École Centrale de Lille et du grand public ;
+		\item[\textbullet] la fourniture d'un accès à internet dans le cadre réglementaire des articles L32 et suivants du Code des postes et communications électroniques ;
+		\item[\textbullet] la mise en place et le maintien de services et d'outils animant la vie associative de l'École Centrale de Lille.
 	\end{itemize}
-	
+
 	\section{Siège social}
 	Le siège social de l'association est situé :\\
 	\\
-	\noindent ÉCOLE CENTRALE DE LILLE \\
-	Avenue Paul Langevin \\
-	Cité Scientifique \\
-	59651 VILLENEUVE D’ASCQ. \\
-	Il pourra être transféré par simple décision du bureau.
-	
+	\noindent ÉCOLE CENTRALE DE LILLE\\
+	Avenue Paul Langevin\\
+	Cité Scientifique\\
+	59651 VILLENEUVE D’ASCQ.\\
+	\\
+	Il pourra être transféré par simple décision du Bureau.
+
 	\section{Durée}
 	La durée de l’association est illimitée.
-	
+
 	\article{Composition de l'association}
-	
+
 	\section{Adhérents connectés}
-		
-	Tout résident de la Résidence Léonard De Vinci peut devenir membre connecté, il peut donc bénéficier de l’ensemble des services de l’association. Il doit pour cela s’acquitter d’une cotisation et signer un contrat dont le montant est défini dans le règlement intérieur. La qualité d’adhérent connecté se perd suite à un défaut de paiement ou par infraction au règlement interieur. La durée d’adhésion est choisie par l’adhérent selon les offres proposées par l’association et peut être reconduite.
-	
+	Tout résident de la Résidence Léonard de Vinci peut devenir membre connecté, il peut donc bénéficier de l’ensemble des services de l’association. Il doit pour cela s’acquitter d’une cotisation dont le montant est défini dans le Règlement Intérieur, et signer un contrat. La qualité d’adhérent connecté se perd suite à un défaut de paiement ou par infraction au Règlement Intérieur. La durée d’adhésion est choisie par l’adhérent selon les offres proposées par l’association et peut être reconduite.
+
 	\section{Adhérents non connectés}
-	
-	Tout élève de l’Ecole centrale de Lille et de L’Institut Technologique Européen d'Entrepreneuriat et de Management peut devenir membre non connecté de l’association. Il peut bénéficier de l’ensemble des services de l’association à l’exception du droit d’accès à Internet. La qualité d’adhérent non connecté se perd par décision du bureau. La durée d’adhésion est de 1 an et 1 jour à compter de la date à laquelle elle est validée.
-	
+	Tout élève de l’École centrale de Lille et de L’Institut Technologique Européen d'Entrepreneuriat et de Management peut devenir membre non connecté de l’association. Il peut bénéficier de l’ensemble des services de l’association à l’exception du droit d’accès à Internet. La qualité d’adhérent non connecté se perd par décision du Bureau. La durée d’adhésion est de 1 an et 1 jour à compter de la date à laquelle elle est validée.
+
 	\section{Adhérents d'honneur}
-	
-	Tout personne qui a été adhérente et dont l’adhésion a pris fin normalement peut se voir attribuée sur décision du bureau le statut d’adhérent d’honneur. Elle peut bénéficier des services de l’association à l’exception du droit d’accès à Internet et ne dispose pas d’un droit de vote en Assemblée générale.
-	
+	Tout personne qui a été adhérente et dont l’adhésion a pris fin normalement peut se voir attribuée sur décision du Bureau le statut d’adhérent d’honneur. Elle peut bénéficier des services de l’association à l’exception du droit d’accès à Internet et ne dispose pas d’un droit de vote en Assemblée Générale.
+
 	\section{Radiation}
 	La qualité de membre se perd par :
 	\begin{enumerate}
-		\item[\textbullet] Le décès;
-		\item[\textbullet] La démission adressée lors d'une assemblée générale;
-		\item[\textbullet] L'exclusion motivée votée à la majorité lors d'une assemblé générale
-		\item[\textbullet] La perte des qualifications requises pour être adhérent
-		\item[\textbullet] Le non respect du règlement
+		\item[\textbullet] Le décès ;
+		\item[\textbullet] La démission adressée lors d'une Assemblée Générale ;
+		\item[\textbullet] L'exclusion motivée votée à la majorité lors d'une assemblé générale ;
+		\item[\textbullet] La perte des qualifications requises pour être adhérent ;
+		\item[\textbullet] Le non respect du règlement.
 	\end{enumerate}
-	
-	\article{DIRECTION DE L’ASSOCIATION}
-	
+
+	\article{Direction de l’association}
+
 	\section{Règlement intérieur}
-L'association Rézoléo se dote d’un Règlement intérieur, définissant la cotisation, les modalités d'élections au sein de l'association et décrivant les engagements des adhérents envers l’Association. Le non-respect du Règlement Intérieur pourra entraîner des sanctions allant jusqu’à l’exclusion définitive de l’association.
-	
+	L'association Rézoléo se dote d’un Règlement Intérieur, définissant la cotisation, les modalités d'élections au sein de l'association et décrivant les engagements des adhérents envers l’association. Le non-respect du Règlement Intérieur pourra entraîner des sanctions allant jusqu’à l’exclusion définitive de l’association.
+
 	\section{Assemblée Générale}
-	
 	L’Assemblée Générale est constituée de l’ensemble des adhérents à jour de cotisation, qui disposent chacun d’un droit de vote. L’Assemblée Générale est souveraine dans toutes ses décisions.
-	
+
 	\section{Assemblée Générale Ordinaire}
-	
-	L'Assemblée Générale se réunit en Assemblée Générale Ordinaire une fois par an. Les convocations et l’ordre du jour sont transmis au moins une semaine en avance à tous les membres de l’Association par le secrétaire. Tous les membres de l'Assemblée Générale disposent d’une voix. Les sujets de vote doivent explicitement être annoncés dans l’ordre du jour préparé par le président de l'association, à partir des points qui lui auront étés proposés par les membres de l'association. En cas d’égalité de voix, celle du Président est prépondérante. Il est possible de voter par procuration. Le quorum est fixé à 5\% des adhérents. 
-	
-	Lors de l'AGO, le président sortant présente un bilan moral des activités de l’association durant l’année écoulée. Le trésorier sortant présente le bilan financier et les comptes de l’association. En cas de démission ou de motif légitime, tout membre désigné en réunion peut effectuer ces bilans. Ces bilans sont soumis à l’approbation de l’assemblée.
-	
+	L'Assemblée Générale se réunit en Assemblée Générale Ordinaire une fois par an. Les convocations et l’ordre du jour sont transmis par le Secrétaire à tous les membres de l’association au moins une semaine en avance. Tous les membres de l'Assemblée Générale disposent d’une voix. Les sujets de vote doivent explicitement être annoncés dans l’ordre du jour préparé par le Président de l'association, à partir des points qui lui auront étés proposés par les membres de l'association. En cas d’égalité de voix, celle du Président est prépondérante. Il est possible de voter par procuration (par lettre ou par mail signé selon un protocole sécurisé). Le quorum est fixé à 5\% des adhérents.
+
+	Lors de l'Assemblée Générale Ordinaire, le Président sortant présente un bilan moral des activités de l’association durant l’année écoulée. Le Trésorier sortant présente le bilan financier et les comptes de l’association. En cas de démission ou de motif légitime, tout membre désigné en réunion peut effectuer ces bilans. Ces bilans sont soumis à l’approbation de l’Assemblée.
+
 	\section{Assemblée Générale Extraordinaire}
-	Sur décision du président ou à la suite d'une demande d'au moins 10\% des adhérents, l'Assemblée Générale est convoquée pour une Assemblée Générale Extraordinaire. L’Ordre du Jour est alors transmis au moins une semaine en avance à tous les membres de l’Association. Chaque adhérent dispose d’un vote. En cas d'égalité, la voix du président est prépondérante. Il est possible de voter par procuration (par lettre ou par mail signé selon un protocole sécurisé). Par défaut un Quorum de 5\%, pour la modification des statuts, pour la dissolution de l'association le quorum, est fixé à 15\%. Dans le cas où le quorum ne serait pas atteint, une nouvelle assemblée peut être reconvoquée dans un délai minimal de quinze jours, sans condition de quorum. 
-	
+	Sur décision du Président ou à la suite d'une demande d'au moins 10\% des adhérents, l'Assemblée Générale est convoquée pour une Assemblée Générale Extraordinaire. L’Ordre du Jour est alors transmis au moins une semaine en avance à tous les membres de l’association. Chaque adhérent dispose d’un vote. En cas d'égalité, la voix du Président est prépondérante. Il est possible de voter par procuration (par lettre ou par mail signé selon un protocole sécurisé). Par défaut un quorum de 5\% est nécessaire pour la modification des statuts, pour la dissolution de l'association le quorum est fixé à 15\%. Dans le cas où le quorum ne serait pas atteint, une nouvelle Assemblée Générale peut être reconvoquée dans un délai minimal de quinze jours, sans condition de quorum.
+
 	\section{Bureau}
-	
-	Le Bureau est élu par les membres adhérents de l'association. Les membres souhaitant se présenter aux différents postes doivent émettre leurs candidature une semaine à l'avance. Cette candidature peut être refusé par le bureau en place. Il comporte obligatoirement un président, un secrétaire et un trésorier. Si elles le jugent nécessaire, il pourra être choisi par chacune des parties prenantes du bureau un adjoint parmi les autres membres adhérents afin de les aider dans leurs prérogatives. Il est possible de voter par procuration (par lettre ou par mail signé selon un protocole sécurisé). Les membres du Bureau peuvent se voir destitués de leurs fonctions s'ils s'absentent ou se voient dans l'incapacité d'exercer leurs fonctions pour une durée supérieure à 3 mois. Dans ce cas les membres adhérents organisent une nouvelle élection pour choisir un ou des remplaçants.\\
-	
+	Le Bureau est élu par les membres adhérents de l'association. Les membres souhaitant se présenter aux différents postes doivent émettre leur candidature une semaine à l'avance. Cette candidature peut être refusée par le Bureau en place. Le Bureau comporte obligatoirement un Président, un Secrétaire et un Trésorier. Si elles le jugent nécessaire, il pourra être choisi par chacune des parties prenantes du Bureau un adjoint parmi les autres membres adhérents afin de les aider dans leurs prérogatives. Il est possible de voter par procuration (par lettre ou par mail signé selon un protocole sécurisé). Les membres du Bureau peuvent se voir destitués de leurs fonctions s'ils s'absentent ou se voient dans l'incapacité d'exercer leurs fonctions pour une durée supérieure à 3 mois. Dans ce cas les membres adhérents organisent une nouvelle élection pour choisir un ou des remplaçants.\\
+
 	\begin{itemize}
-		\item[\textbullet] Président \\
-		 Le président est le responsable moral de l’Association. Il est à ce titre habilité à agir auprès des tiers au nom de l’association. Il est garant, avec le trésorier, de la santé de l’association, tant d’un point de vue pratique que financier.\\
-		Le rôle du président pourra être précisé, dans ses modalités, dans le Règlement Intérieur. \newpage
-		\item[\textbullet] Trésorier \\
-		Le trésorier est responsable de la gestion comptable et financière de l’association, notamment du fonctionnement de ses comptes bancaires ainsi que de la saisie comptable. Il assure le recouvrement des cotisations et des ressources de toute nature de l’association. Il effectue les paiements et perçoit les recettes avec l’accord du président.\\
-		
+		\item[\textbullet] Président\\
+		 Le Président est le responsable moral de l’association. Il est à ce titre habilité à agir auprès des tiers au nom de l’association. Il est garant, avec le Trésorier, de la santé de l’association.\\
+		Le rôle du Président pourra être précisé, dans ses modalités, dans le Règlement Intérieur.
+		\item[\textbullet] Trésorier\\
+		Le Trésorier est responsable de la gestion comptable et financière de l’association, notamment du fonctionnement de ses comptes bancaires ainsi que de la saisie comptable. Il assure le recouvrement des cotisations et des ressources de toute nature de l’association. Il effectue les paiements et perçoit les recettes avec l’accord du Président.\\
+		Le rôle du Trésorier pourra être précisé, dans ses modalités, dans le Règlement Intérieur.
+
 		\item[\textbullet] Secrétaire\\
-		Le secrétaire est responsable de la bonne tenue des réunions, ainsi que de leur compte-rendu. Il est responsable et de la gestion administrative de l’association, notamment de l’acheminement du courrier (superflu et trop précis). Il est également habilité sous réserve du droit des tiers à délivrer tout les documents officiels du Rézoléo.  Le rôle du secrétaire pourra être précisé dans le Règlement Intérieur. \\
-		
-		Tout membre du bureau ne peut être nommé à plus d'un poste à la fois. Le Bureau est renouvelé tous les ans selon les modalités de renouvellement précisées dans le règlement intérieur.\\
+		Le Secrétaire est responsable de la bonne tenue des réunions, ainsi que de leur compte-rendu. Il est responsable de la gestion administrative de l’association. Il est également habilité sous réserve du droit des tiers à délivrer tous les documents officiels du Rézoléo.\\
+		Le rôle du Secrétaire pourra être précisé dans le Règlement Intérieur.\\
+
+		Tout membre du Bureau ne peut être nommé à plus d'un poste à la fois. Le Bureau est renouvelé tous les ans selon les modalités de renouvellement précisées dans le Règlement Intérieur.
 	\end{itemize}
-	
-	\article{SITUATIONS EXCEPTIONNELLES}
-	
+
+	\article{Situations exceptionnelles}
+
 	\section{Modification des statuts}
-	Les présents statuts peuvent être modifiés sur proposition du Bureau et vote lors d'une Assemblée Générale Ordinaire dont le quorum est fixée à 5\%. (déjà mentionné précédemment, nettoyez un article)
-	Les procédures sont alors entreprises par le Secrétaire ou tout autre personne nommé en assemblé générale dans un délai d’un mois après la parution du Compte Rendu. (Superflu dans les statuts)
-	
+	Les présents statuts peuvent être modifiés sur proposition du Bureau et vote lors d'une Assemblée Générale Ordinaire.
+	Les procédures sont alors entreprises par le Secrétaire ou tout autre personne nommé en assemblé générale dans un délai d’un mois après la parution du Compte Rendu.
+
 	\section{Dissolution}
-	L’Association peut être dissoute sur proposition du Bureau et vote lors d'une Assemblée Générale Extraordinaire dont le quorum est fixé à 15\%.
-	Le Président ou tout autre personne nommée en Assemblé générale est alors responsable du processus de dissolution tel que décrit par le cadre légal jusqu’à son aboutissement.
+	L’association peut être dissoute sur proposition du Bureau et vote lors d'une Assemblée Générale Extraordinaire.
+	Le Président ou toute autre personne nommée en Assemblé Générale est alors responsable du processus de dissolution tel que décrit par le cadre légal jusqu’à son aboutissement.
 \end{document}
