Récupération des commentaires depuis l'etherpad
https://etherpad.rezometz.org/p/statuts_rezoleo

--- a/Statuts.tex
+++ b/Statuts.tex
@@ -47,6 +47,8 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 
 	\section{Adhérents non connectés}
 	Tout élève de l’École centrale de Lille et de L’Institut Technologique Européen d'Entrepreneuriat et de Management peut devenir membre non connecté de l’association. Il peut bénéficier de l’ensemble des services de l’association à l’exception du droit d’accès à Internet. La qualité d’adhérent non connecté se perd par décision du Bureau. La durée d’adhésion est de 1 an et 1 jour à compter de la date à laquelle elle est validée.
+	% Toute personne peut demander, les élèves le sont automatiquement, les autres sur décision du bureau (pour les anciens et autres cas à la con)
+	% question con : pourquoi un an et un jour ?
 
 	\section{Adhérents d'honneur}
 	Tout personne qui a été adhérente et dont l’adhésion a pris fin normalement peut se voir attribuée sur décision du Bureau le statut d’adhérent d’honneur. Elle peut bénéficier des services de l’association à l’exception du droit d’accès à Internet et ne dispose pas d’un droit de vote en Assemblée Générale.
@@ -65,6 +67,7 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 
 	\section{Règlement intérieur}
 	L'association Rézoléo se dote d’un Règlement Intérieur, définissant la cotisation, les modalités d'élections au sein de l'association et décrivant les engagements des adhérents envers l’association. Le non-respect du Règlement Intérieur pourra entraîner des sanctions allant jusqu’à l’exclusion définitive de l’association.
+	% «modalités d'élections au sein de l'association» ? y'a justement l'article 13 pour ça, et sinon pourquoi dans le RI ?
 
 	\section{Assemblée Générale}
 	L’Assemblée Générale est constituée de l’ensemble des adhérents à jour de cotisation, qui disposent chacun d’un droit de vote. L’Assemblée Générale est souveraine dans toutes ses décisions.
@@ -76,6 +79,8 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 
 	\section{Assemblée Générale Extraordinaire}
 	Sur décision du Président ou à la suite d'une demande d'au moins 10\% des adhérents, l'Assemblée Générale est convoquée pour une Assemblée Générale Extraordinaire. L’Ordre du Jour est alors transmis au moins une semaine en avance à tous les membres de l’association. Chaque adhérent dispose d’un vote. En cas d'égalité, la voix du Président est prépondérante. Il est possible de voter par procuration (par lettre ou par mail signé selon un protocole sécurisé). Par défaut un quorum de 5\% est nécessaire pour la modification des statuts, pour la dissolution de l'association le quorum est fixé à 15\%. Dans le cas où le quorum ne serait pas atteint, une nouvelle Assemblée Générale peut être reconvoquée dans un délai minimal de quinze jours, sans condition de quorum.
+	% pourquoi pas de quorum par défaut (incohérent avec AGO) ?
+	% Beaucoup plus pour dissolution ? En supposant que la disolution ait lieu car l'asso n'a plus de membres, c'est facile de tous les avoir :-D
 
 	\section{Bureau}
 	Le Bureau est élu par les membres adhérents de l'association. Les membres souhaitant se présenter aux différents postes doivent émettre leur candidature une semaine à l'avance. Cette candidature peut être refusée par le Bureau en place. Le Bureau comporte obligatoirement un Président, un Secrétaire et un Trésorier. Si elles le jugent nécessaire, il pourra être choisi par chacune des parties prenantes du Bureau un adjoint parmi les autres membres adhérents afin de les aider dans leurs prérogatives. Il est possible de voter par procuration (par lettre ou par mail signé selon un protocole sécurisé). Les membres du Bureau peuvent se voir destitués de leurs fonctions s'ils s'absentent ou se voient dans l'incapacité d'exercer leurs fonctions pour une durée supérieure à 3 mois. Dans ce cas les membres adhérents organisent une nouvelle élection pour choisir un ou des remplaçants.\\
@@ -84,8 +89,10 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 		\item[\textbullet] Président\\
 		 Le Président est le responsable moral de l’association. Il est à ce titre habilité à agir auprès des tiers au nom de l’association. Il est garant, avec le Trésorier, de la santé de l’association.\\
 		Le rôle du Président pourra être précisé, dans ses modalités, dans le Règlement Intérieur.
+		% utile ? - C'est juste pour se laisser une possibilité supplémentaire - « complété » / « élargi » plutôt ? - (c'est pas le but d'un RI)
 		\item[\textbullet] Trésorier\\
 		Le Trésorier est responsable de la gestion comptable et financière de l’association, notamment du fonctionnement de ses comptes bancaires ainsi que de la saisie comptable. Il assure le recouvrement des cotisations et des ressources de toute nature de l’association. Il effectue les paiements et perçoit les recettes avec l’accord du Président.\\
+		% Accord du président pour les recettes me semble superflu -> ça me rappelle d'autres statuts (mais ça me semble quand même bête…)
 		Le rôle du Trésorier pourra être précisé, dans ses modalités, dans le Règlement Intérieur.
 
 		\item[\textbullet] Secrétaire\\
@@ -105,3 +112,39 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 	L’association peut être dissoute sur proposition du Bureau et vote lors d'une Assemblée Générale Extraordinaire.
 	Le Président ou toute autre personne nommée en Assemblé Générale est alors responsable du processus de dissolution tel que décrit par le cadre légal jusqu’à son aboutissement.
 \end{document}
+
+\begin{comment}
+
+Article 42 : Déclaration des modifications
+Pour que les changements de bureau et de status soient effectifs, il faut les déclarer … retrouver l'article de la loi de 1901 qui le dit mieux que moi ? (si la loi le dit, pourquoi le réécrire ?) là tu marques un point -> pour ne pas que les jeunes oublient ;-D (mais sinon, je suis d'accord sur le principe que de ne pas mettre un article de loi dans un document ne suffit pas pour qu'il ne s'applique pas)
+source : http://www.assistant-juridique.fr/comment_modifier_statuts_association.jsp
+Les modifications doivent être déclarées en préfecture ou sous-préfecture (peut-être préciser laquelle ?) dans un délai de 3 mois après modification. (peut-être préciser : c'est le rôle du secrétaire de s'en occuper)
+
+Remarques de CoquatriX :
+- Vous incluez beaucoup de chiffres alors que le RI devrait se charger de définir les précisions des modalités
+- L'objet est à la fois trop vague et trop précis, et comporte certains points qui semblent difficle à mettre en oeuvre et/ou à justifier
+- Les modalités de la moindre décision ou élections paraissent alambiqués
+- Le statut de membre d'honneur me parait carrément superflu, surtout sans droit de vote, et la notion d'élève est mal définie.
+- Le problème avait été résolu en première version par l'existence d'un Conseil d'administration , l'"Equipe Rézoléo", qui résolvait nombre de questions et particularités du système envsagé tout en prévoyant une protection contre les éventuelles failles systémique.
+- Vous définissez trop souvent par inclusion et non par exclusion.
+- Vous avez voulu dire beaucoup de choses dans un document pour lequel il faut faire court et simple. les tatuts ne sont pas un document à brandir à la moindre question/conflit, c'est un contrat entre plusieurs personnes sur un objet et des rôles, ou plus simplement des droits et obligations.
+
+Autres remarques :
+
+règlement intérieur 
+
+*la cotisation est de xxx
+
+*les procurations sont données sur papier livre (signé ?) ou par courrier électronique signé en PGP (par une clef qui vient d'être générée ? déjà connue du screz ?) au moins 24 heures à l'avance au secrétaire (ou au CA en entier ? quid du screz adjoint ?) tu as raison, il vaut mieux préciser
+
+*en cas de non-respect des règles, les sanctions sont
+
+*il est interdit de
+
+*les membres ayant un accès élevé aux machines de l'association sont nommés et révoqués par le bureau. 
+Il sont responsables/pas responsables de ce qu'ils en font (rayez la mention inutile)
+
+*les compte-rendus seront publiés aux membres par envoi sur une ml/publication sur papier affiché à xxx /mis en ligne sur un site internet rezoleo.fr /  au(x) format(s) (parmi ceux-ci) pdf/odt/word/txt
+
+*les textes normatifs tels que statuts et règlement intérieur doivent être librement accessibles sur le site internet de l'asso et/ou affichage papier, etc.
+\end{comment}
