Add last page with date and signature needed

--- a/Statuts.tex
+++ b/Statuts.tex
@@ -5,6 +5,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{array, multirow, tabularx}
 \usepackage{graphicx}
+\usepackage{multicol}
 
 \begin{document}
 	\title{Rézoléo - Statuts}
@@ -111,6 +112,17 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 	\section{Dissolution}
 	L’association peut être dissoute sur proposition du Bureau et vote lors d'une Assemblée Générale Extraordinaire.
 	Le Président ou toute autre personne nommée en Assemblé Générale est alors responsable du processus de dissolution tel que décrit par le cadre légal jusqu’à son aboutissement.
+	
+	\newpage
+	
+	Les présents statuts ont été adoptés ce jour par l'assemblée générale et seront déclarés, par le président de l'association Rézoléo, dans un délai de trois mois.
+	\begin{flushright}
+		Fait à Villeneuve D'ascq, le 05 mai 2017 en deux exemplaires originaux.\\
+		Pour l'assemblée générale,
+	\end{flushright}
+	\begin{tabular}{lll}
+		Le Président, & Le Secrétaire, & Le Trésorier, \\
+	\end{tabular}
 \end{document}
 
 \begin{comment}
