Error in the date in the last page

--- a/Statuts.tex
+++ b/Statuts.tex
@@ -10,7 +10,7 @@
 \begin{document}
 	\title{Rézoléo - Statuts}
 	\author{Association déclarée par application de la loi du 1er juillet 1901 et du décret du 16 août 1901}
-	\date{27/04/2017}
+	\date{24/07/2017}
 	\maketitle
 	\newpage
 
@@ -117,7 +117,7 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 	
 	Les présents statuts ont été adoptés ce jour par l'assemblée générale et seront déclarés, par le président de l'association Rézoléo, dans un délai de trois mois.
 	\begin{flushright}
-		Fait à Villeneuve D'ascq, le 05 mai 2017 en deux exemplaires originaux.\\
+		Fait à Villeneuve D'ascq, le 24 mars 2017 en deux exemplaires originaux.\\
 		Pour l'assemblée générale,
 	\end{flushright}
 	\begin{tabular}{lll}
