--- a/Statuts.tex
+++ b/Statuts.tex
@@ -10,7 +10,7 @@
 \begin{document}
 	\title{Rézoléo - Statuts}
 	\author{Association déclarée par application de la loi du 1er juillet 1901 et du décret du 16 août 1901}
-	\date{24/07/2017}
+	\date{24/04/2017}
 	\maketitle
 	\newpage
 
@@ -115,14 +115,12 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 	
 	\newpage
 	
-	Les présents statuts ont été adoptés ce jour par l'assemblée générale et seront déclarés, par le président de l'association Rézoléo, dans un délai de trois mois.
+	Les présents statuts ont été adoptés ce jour par l'Assemblée Générale et seront déclarés, par le Président de l'association Rézoléo, dans un délai de trois mois.
 	\begin{flushright}
-		Fait à Villeneuve D'ascq, le 24 mars 2017 en deux exemplaires originaux.\\
-		Pour l'assemblée générale,
+		Fait à Villeneuve d'Ascq, le 24 avril 2017 en deux exemplaires originaux.\\
+		Pour l'Assemblée Générale,
 	\end{flushright}
-	\begin{tabular}{lll}
-		Le Président, & Le Secrétaire, & Le Trésorier, \\
-	\end{tabular}
+	\noindent Le Président,\hfill  Le Secrétaire,\hfill  Le Trésorier, \\
 \end{document}
 
 \begin{comment}
