--- a/Statuts.tex
+++ b/Statuts.tex
@@ -10,26 +10,26 @@
 \begin{document}
 	\title{Rézoléo - Statuts}
 	\author{Association déclarée par application de la loi du 1er juillet 1901 et du décret du 16 août 1901}
-	\date{24/04/2017}
+	\date{11/01/2024}
 	\maketitle
 	\newpage
 
 	\article{Présentation de l'association}
 
 	\section{Nom}
-Il est fondé entre les adhérents aux présents statuts une association régie par la loi du 1er juillet 1901 et le décret du 16 août 1901, ayant pour titre : Rézoléo
+Il est fondé entre les adhérents aux présents statuts une association régie par la loi du 1er juillet 1901 et le décret du 16 août 1901, ayant pour titre : Rézoléo (ci-après \og l'association\fg).
 
 	\section{Objet et moyens d'action}
 	L’association a pour missions :
 	\begin{itemize}
-		\item[\textbullet] la gestion, l'adaptation des réseaux de la résidence Léonard de Vinci située à Villeneuve d'Ascq ;
-		\item[\textbullet]la promotion des projets et activités informatiques réalisés par ses membres auprès de l’École Centrale de Lille et du grand public ;
+		\item[\textbullet] la gestion, l'adaptation des réseaux de la résidence Léonard de Vinci située Avenue Paul Langevin à Villeneuve d'Ascq ;
+		\item[\textbullet]la promotion des projets et activités informatiques réalisés par ses membres auprès de Centrale Lille Institut et du grand public ;
 		\item[\textbullet] la fourniture d'un accès à internet dans le cadre réglementaire des articles L32 et suivants du Code des postes et communications électroniques ;
-		\item[\textbullet] la mise en place et le maintien de services et d'outils animant la vie associative de l'École Centrale de Lille.
+		\item[\textbullet] la mise en place et le maintien de services et d'outils animant la vie associative de Centrale Lille Institut.
 	\end{itemize}
 
 	\section{Siège social}
-	Le siège social de l'association est situé :\\
+	Le siège social de l'association est situé à l'adresse :\\
 	\\
 	\noindent ÉCOLE CENTRALE DE LILLE\\
 	Avenue Paul Langevin\\
@@ -44,15 +44,15 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 	\article{Composition de l'association}
 
 	\section{Adhérents connectés}
-	Tout résident de la Résidence Léonard de Vinci peut devenir membre connecté, il peut donc bénéficier de l’ensemble des services de l’association. Il doit pour cela s’acquitter d’une cotisation dont le montant est défini dans le Règlement Intérieur, et signer un contrat. La qualité d’adhérent connecté se perd suite à un défaut de paiement ou par infraction au Règlement Intérieur. La durée d’adhésion est choisie par l’adhérent selon les offres proposées par l’association et peut être reconduite.
+	Tout résident de la Résidence Léonard de Vinci peut devenir membre connecté, et ainsi bénéficier de l’ensemble des services fournis par l’association. Il doit pour cela s’acquitter d’une cotisation dont le montant est défini dans le Règlement Intérieur, et signer un contrat. La qualité d’adhérent connecté se perd suite à un défaut de paiement ou selon les modalités prévues par l'Article 8. La durée d’adhésion est choisie par l’adhérent selon les offres proposées par l’association et peut être reconduite. L'adhérent connecté dispose d'une voix délibérative en Assemblée Générale.
 
 	\section{Adhérents non connectés}
-	Tout élève de l’École centrale de Lille et de L’Institut Technologique Européen d'Entrepreneuriat et de Management peut devenir membre non connecté de l’association. Il peut bénéficier de l’ensemble des services de l’association à l’exception du droit d’accès à Internet. La qualité d’adhérent non connecté se perd par décision du Bureau. La durée d’adhésion est de 1 an et 1 jour à compter de la date à laquelle elle est validée.
+	Tout élève de l’École Centrale de Lille, de L’Institut Technologique Européen d'Entrepreneuriat et de Management (ITEEM) ou de l'École Nationale Supérieure de Chimie de Lille (ENSCL) peut devenir membre non connecté de l’association. Il peut bénéficier de l’ensemble des services de l’association à l’exception du droit d’accès à Internet. La qualité d’adhérent non connecté se perd par décision unanime du Bureau ou selon les modalités prévues par l'Article 8. La durée d’adhésion est de 1 an et 1 jour à compter de la date à laquelle elle est validée.
 	% Toute personne peut demander, les élèves le sont automatiquement, les autres sur décision du bureau (pour les anciens et autres cas à la con)
 	% question con : pourquoi un an et un jour ?
 
 	\section{Adhérents d'honneur}
-	Tout personne qui a été adhérente et dont l’adhésion a pris fin normalement peut se voir attribuée sur décision du Bureau le statut d’adhérent d’honneur. Elle peut bénéficier des services de l’association à l’exception du droit d’accès à Internet et ne dispose pas d’un droit de vote en Assemblée Générale.
+	Tout personne qui a été adhérente et dont l’adhésion a pris fin normalement peut se voir attribuer sur décision unanime du Bureau le statut d’adhérent d’honneur. Elle peut bénéficier des services de l’association à l’exception du droit d’accès à Internet et ne dispose que d'une voix consultative en Assemblée Générale.
 
 	\section{Radiation}
 	La qualité de membre se perd par :
@@ -61,7 +61,7 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 		\item[\textbullet] La démission adressée lors d'une Assemblée Générale ;
 		\item[\textbullet] L'exclusion motivée votée à la majorité lors d'une assemblé générale ;
 		\item[\textbullet] La perte des qualifications requises pour être adhérent ;
-		\item[\textbullet] Le non respect du règlement.
+		\item[\textbullet] Le non respect du Règlement Intérieur tel que défini à l'Article 9.
 	\end{enumerate}
 
 	\article{Direction de l’association}
@@ -100,7 +100,7 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 		Le Secrétaire est responsable de la bonne tenue des réunions, ainsi que de leur compte-rendu. Il est responsable de la gestion administrative de l’association. Il est également habilité sous réserve du droit des tiers à délivrer tous les documents officiels du Rézoléo.\\
 		Le rôle du Secrétaire pourra être précisé dans le Règlement Intérieur.\\
 
-		Tout membre du Bureau ne peut être nommé à plus d'un poste à la fois. Le Bureau est renouvelé tous les ans selon les modalités de renouvellement précisées dans le Règlement Intérieur.
+		Aucun membre du Bureau ne peut être nommé à plus d'un poste à la fois. Le Bureau est renouvelé tous les ans selon les modalités de renouvellement précisées dans le Règlement Intérieur.
 	\end{itemize}
 
 	\article{Situations exceptionnelles}
@@ -112,9 +112,9 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 	\section{Dissolution}
 	L’association peut être dissoute sur proposition du Bureau et vote lors d'une Assemblée Générale Extraordinaire.
 	Le Président ou toute autre personne nommée en Assemblé Générale est alors responsable du processus de dissolution tel que décrit par le cadre légal jusqu’à son aboutissement.
-	
+
 	\newpage
-	
+
 	Les présents statuts ont été adoptés ce jour par l'Assemblée Générale et seront déclarés, par le Président de l'association Rézoléo, dans un délai de trois mois.
 	\begin{flushright}
 		Fait à Villeneuve d'Ascq, le 24 avril 2017 en deux exemplaires originaux.\\
@@ -141,7 +141,7 @@ Remarques de CoquatriX :
 
 Autres remarques :
 
-règlement intérieur 
+règlement intérieur
 
 *la cotisation est de xxx
 
@@ -151,7 +151,7 @@ règlement intérieur
 
 *il est interdit de
 
-*les membres ayant un accès élevé aux machines de l'association sont nommés et révoqués par le bureau. 
+*les membres ayant un accès élevé aux machines de l'association sont nommés et révoqués par le bureau.
 Il sont responsables/pas responsables de ce qu'ils en font (rayez la mention inutile)
 
 *les compte-rendus seront publiés aux membres par envoi sur une ml/publication sur papier affiché à xxx /mis en ligne sur un site internet rezoleo.fr /  au(x) format(s) (parmi ceux-ci) pdf/odt/word/txt
