Petite correction orthographique

--- a/Statuts.tex
+++ b/Statuts.tex
@@ -52,7 +52,7 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 	% question con : pourquoi un an et un jour ?
 
 	\section{Adhérents d'honneur}
-	Tout personne qui a été adhérente et dont l'adhésion a pris fin normalement peut se voir attribuer sur décision unanime du Bureau le statut d'adhérent d'honneur. Elle peut bénéficier des services de l'association à l'exception du droit d'accès à Internet et ne dispose que d'une voix consultative en Assemblée Générale.
+	Toute personne qui a été adhérente et dont l'adhésion a pris fin normalement peut se voir attribuer sur décision unanime du Bureau le statut d'adhérent d'honneur. Elle peut bénéficier des services de l'association à l'exception du droit d'accès à Internet et ne dispose que d'une voix consultative en Assemblée Générale.
 
 	\section{Radiation}
 	La qualité de membre se perd par :
