Fix date dans le pied de page

--- a/Statuts.tex
+++ b/Statuts.tex
@@ -117,7 +117,7 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 
 	Les présents statuts ont été adoptés ce jour par l'Assemblée Générale et seront déclarés, par le Président de l'association Rézoléo, dans un délai de trois mois.
 	\begin{flushright}
-		Fait à Villeneuve d'Ascq, le 24 avril 2017 en deux exemplaires originaux.\\
+		Fait à Villeneuve d'Ascq, le 11 janvier 2024 en deux exemplaires originaux.\\
 		Pour l'Assemblée Générale,
 	\end{flushright}
 	\noindent Le Président,\hfill  Le Secrétaire,\hfill  Le Trésorier, \\
